--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <br>
         <progress  value="95" max="100">95%</progress>
         <br>
-        <p>SQL</p>
+        <p>CATIA</p>
         <br>
-        <progress  value="60" max="100">60%</progress>
+        <progress  value="75" max="100">75%</progress>
         <br>
         <p>Solidwork</p>
         <br>
