--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </nav>
         <div class="header-text">
           <h1>DINESH KUMAR PERUMAL</h2>
-            <h3>I'm Web Deginer & Automotive Engineer</h3>
+            <h3> Automotive Engineer</h3>
         </div>
         </div>
       </div>
