--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                 <li><b>City</b>   : Thiruchirappalli, India</li>
                 <li><b>Email</b>  : dineshkkumarp@gmail.com</li>
                 </ul>
-                <p>Self-driven programmer with extensive experience building user-facing applications. Efficient and knowledgeable coder with skills in HTML, CSS and SQL.
-                Dedicated Automotive Engineer in designing, testing, and manufacturing automotive components and systems.Adept at collaborating with cross-functional teams to drive projects to successful completion.</p>
+                <p>"Motivated and results-driven automotive engineer with a strong foundation in vehicle design, testing, and development, seeking a position where I can contribute to the creation of innovative, efficient, and safe vehicle technologies. Eager to leverage my technical expertise, problem-solving skills, and passion for automotive advancements to enhance the performance and sustainability of next-generation vehicles while staying abreast of the latest industry trends in electric and autonomous vehicle engineering."</p>
               </nav>
             </div>
           </div>
